# gooli

./: AUTHOR  Makefile.am  Makefile.in  README  README.md  configure.ac  mif.goo
lib/: goo.goo  gooli.gooli
lib/collection/: collection.goo  collection.gooli  enum.goo  flat.gooli  lazy.gooli  list.goo  list.gooli  map.gooli  sequence.goo  sequence.gooli  string.goo  string.gooli  vec.goo
lib/runtime/: char.goo  char.gooli  collection.gooli  condition.goo  condition.gooli  fun.goo  io.goo  io.gooli  macro.goo  macros.goo  scalar.goo  scalar.gooli  string.gooli  symbol.goo  table.gooli  type.goo  type.gooli  vector.gooli
src/: Makefile.am  Makefile.in  goo.scm
test/: test.gooli
